# Skills-Augment-For-End-to-End-Autonomous-Driving-Perception-

./: .env.example  .gitignore  EXPERIMENT_SUMMARY.md  Guide.md  README.md  REPORT_边缘云协作视觉感知_20260401.md  STATUS_SUMMARY.md  analyze_results.py  demo_universal_framework.py  diagnose_cloud_reflection.sh  extract_skills_once.py  extract_skills_periodically.py  findings.md  fix_mcp_and_restart.sh  fix_proxy_and_rerun.sh  generate_interim_report.py  launch_200_adaptive_experiment.py  launch_200_far_range_experiment.py  launch_far_range_experiment.py  monitor_200_exp.sh  paper_report_draft.md  pyproject.toml  quick_test.sh  research-log.md  research-state.yaml  run_200_adaptive_fixed.sh  run_200_advanced_monitor.sh  run_200_fixed_dashboard.sh  run_200_no_reflection.sh  run_200_with_dashboard.sh  run_200_with_fixed_timeout.sh  run_batch_synth.sh  run_dtpqa_research.sh  run_fixed_experiment.sh  run_full_experiment.sh  run_full_experiments.sh  run_judge.sh  run_large_scale_200.sh
configs/: settings.yaml
configs/prompts/: cloud_reflection.md  edge_scene_graph.md  edge_with_skill.md  judge_alignment.md  skill_compile.md  skill_decide.md  skill_merge.md  skill_update.md
docs/: architecture.md  benchmark_setup.md  protocol_mapping.md
experiments/: run_dtpqa_200_adaptive_20260401_151251.sh  run_dtpqa_200_far_range_20260401_150747.sh  run_dtpqa_far_range_skill_gen_20260401_144923.sh
experiments/configs/: dtpqa_far_range_skill_gen_20260401_144923.json
experiments/dtpqa-integration/: README.md  analysis.md  (+4 more)
literature/: survey.md
paper/: undergrad_thesis_draft_20260410.md
(+137 files in other folders)
